@@ -1170,12 +1170,14 @@ presets = {
             {type="item",       name="concrete",                quantity=1},
             {type="item",       name="plastic-bar",             quantity=1},
             {type="item",       name="gold-ingot",              quantity=1},
+            {type="item",       name="steel-ingot",             quantity=1},
             {type="item",       name="nickel-ingot",            quantity=1},
             {type="item",       name="lead-ingot",              quantity=1},
             {type="item",       name="chromium-ingot",          quantity=1},
             {type="item",       name="platinum-ingot",          quantity=1},
             {type="item",       name="brass-ingot",             quantity=1},
-            {type="item",       name="steel-ingot",             quantity=1},
+            {type="item",       name="carbon-foil",             quantity=1},
+            {type="item",       name="electrum-gem",            quantity=1},
             {type="item",       name="electronic-circuit",      quantity=1},
             {type="item",       name="computer-mk1",            quantity=1},
             {type="item",       name="advanced-circuit",        quantity=1},
@@ -1188,6 +1190,7 @@ presets = {
             {type="item",       name="construction-robot",      quantity=1},
             {type="item",       name="monowheel",               quantity=1},
             {type="item",       name="heavy-roller",            quantity=1},
+            {type="item",       name="heavy-picket",            quantity=1},
             {type="item",       name="car",                     quantity=1},
             {type="item",       name="tank",                    quantity=1},
             {type="item",       name="locomotive",              quantity=1},
@@ -1233,25 +1236,25 @@ presets = {
 
             {type="group",      name="Special Projects"},
             {type="item",       name="carbon-special-analysis",   quantity=1},
-            {type="item",       name="carbon-special-analysis",   quantity=2650},
+            {type="technology", name="ir-gasification",           quantity=1},
             {type="item",       name="gold-special-analysis",     quantity=1},
-            {type="item",       name="gold-special-analysis",     quantity=250},
+            {type="technology", name="ir-electronics-2",          quantity=1},
             {type="item",       name="lead-special-analysis",     quantity=1},
-            {type="item",       name="lead-special-analysis",     quantity=400},
+            {type="technology", name="ir-advanced-batteries",     quantity=1},
             {type="item",       name="nickel-special-analysis",   quantity=1},
-            {type="item",       name="nickel-special-analysis",   quantity=500},
+            {type="technology", name="ir-electroplating",         quantity=1},
             {type="item",       name="diamond-special-analysis",  quantity=1},
-            {type="item",       name="diamond-special-analysis",  quantity=50},
+            {type="technology", name="ir-pressing",               quantity=1},
             {type="item",       name="ruby-special-analysis",     quantity=1},
-            {type="item",       name="ruby-special-analysis",     quantity=100},
+            {type="technology", name="laser-2",                   quantity=1},
             {type="item",       name="electrum-special-analysis", quantity=1},
-            {type="item",       name="electrum-special-analysis", quantity=1000},
+            {type="technology", name="ir-electronics-3",          quantity=1},
             {type="item",       name="helium-special-analysis",   quantity=1},
-            {type="item",       name="helium-special-analysis",   quantity=120},
+            {type="technology", name="ir-force-fields",           quantity=1},
             {type="item",       name="hydrogen-special-analysis", quantity=1},
-            {type="item",       name="hydrogen-special-analysis", quantity=1250},
+            {type="technology", name="rocket-silo",               quantity=1},
             {type="item",       name="uranium-special-analysis",  quantity=1},
-            {type="item",       name="uranium-special-analysis",  quantity=1200},
+            {type="technology", name="nuclear-power",             quantity=1},
 
             {type="group",      name="Resources"},
             {type="item",       name="copper-ingot",            quantity=1},
@@ -1262,12 +1265,14 @@ presets = {
             {type="item",       name="concrete",                quantity=1},
             {type="item",       name="plastic-bar",             quantity=1},
             {type="item",       name="gold-ingot",              quantity=1},
+            {type="item",       name="steel-ingot",             quantity=1},
             {type="item",       name="nickel-ingot",            quantity=1},
             {type="item",       name="lead-ingot",              quantity=1},
             {type="item",       name="chromium-ingot",          quantity=1},
             {type="item",       name="platinum-ingot",          quantity=1},
             {type="item",       name="brass-ingot",             quantity=1},
-            {type="item",       name="steel-ingot",             quantity=1},
+            {type="item",       name="carbon-foil",            quantity=1},
+            {type="item",       name="electrum-gem",            quantity=1},
             {type="item",       name="electronic-circuit",      quantity=1},
             {type="item",       name="computer-mk1",            quantity=1},
             {type="item",       name="advanced-circuit",        quantity=1},
@@ -1280,12 +1285,12 @@ presets = {
             {type="item",       name="construction-robot",      quantity=1},
             {type="item",       name="monowheel",               quantity=1},
             {type="item",       name="heavy-roller",            quantity=1},
+            {type="item",       name="heavy-picket",            quantity=1},
             {type="item",       name="car",                     quantity=1},
             {type="item",       name="tank",                    quantity=1},
             {type="item",       name="locomotive",              quantity=1},
             {type="item",       name="spidertron",              quantity=1},
             {type="item",       name="chrome-transmat",         quantity=1},
-            {type="technology", name="rocket-silo",             quantity=1},
             {type="item",       name="rocket-part",             quantity=100},
 
             {type="group",      name="Power"},
